@@ -1,3 +1,4 @@
+* Use immutable datastructures for Dict and MultiSelection fields
 * Combine search and get_keys in DictSchemaMixin
 * Reset less often the user sessions
 * Protect trusted devices against brute force attack
